fixed double scroll bars

--- a/main.css
+++ b/main.css
@@ -9,6 +9,10 @@
 }
 * {
   font-family: "Fredoka", sans-serif;
+  /* border: 2px solid red; */
+}
+body {
+  overflow: hidden;
 }
 .preload * {
   transition: none !important;
